--- a/wp-content/themes/yoyo-tube/assets/src/scss/3-layout/_header.scss
+++ b/wp-content/themes/yoyo-tube/assets/src/scss/3-layout/_header.scss
@@ -1,5 +1,8 @@
-@use '../0-abstracts/abstracts' as *;
+@use "../0-abstracts/abstracts" as *;
 // header.scss
+body.container {
+  background-color: $darker-bg;
+}
 .site-header {
   background-color: $darker-bg;
   height: $header-height;
