Author-profile with Author.php is created

--- a/wp-content/themes/yoyo-tube/assets/src/scss/4-pages/_pages.scss
+++ b/wp-content/themes/yoyo-tube/assets/src/scss/4-pages/_pages.scss
@@ -1,7 +1,7 @@
 @forward 'home';
 @forward 'videos';
-@forward 'profile';
 @forward 'upload';
 @forward 'front-page';
 @forward 'video_player';
 @forward 'login-signup';
+@forward 'author-profile';
