--- a/wp-content/themes/yoyo-tube/assets/src/scss/2-components/_buttons.scss
+++ b/wp-content/themes/yoyo-tube/assets/src/scss/2-components/_buttons.scss
@@ -8,7 +8,7 @@
   margin: 2rem auto 1rem;
   padding: 0.75rem 2rem;
   background: $primary-purple;
-  color: $text-light;
+  color: $text-light !important;
   border: none;
   border-radius: 50px;
   font-weight: 600;
