--- a/wp-content/themes/yoyo-tube/assets/src/scss/2-components/_buttons.scss
+++ b/wp-content/themes/yoyo-tube/assets/src/scss/2-components/_buttons.scss
@@ -1,7 +1,8 @@
 @use '../0-abstracts/abstracts' as *;
 @use 'sass:color';
 // Buttons
-.btn-primary {
+.btn-primary,
+input[type='submit'] {
   display: block;
   width: auto;
   min-width: 180px;
@@ -31,7 +32,8 @@
 }
 
 // Buttons
-.btn-secondary {
+.btn-secondary,
+input[type='submit'] {
   display: block;
   width: auto;
   min-width: 180px;
